FileManagerBrowserTest: log test case name

Rather than LOG the test extension name, LOG the test case name.

Tbr: yamaguchi-san
Bug: 692034, 833834
Change-Id: I6b2cf99860fa937d4801a5d7236151d7bb013f44
Reviewed-on: https://chromium-review.googlesource.com/1023490
Reviewed-by: Noel Gordon <noel@chromium.org>
Commit-Queue: Noel Gordon <noel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552586}
Former-commit-id: 3c18a85d5515e527707def269fd027b59bdef464